--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Fiction'
+- GITenberg
 title: De baanwachter
 url: http://www.gutenberg.org/ebooks/13378
